--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: 'Proxima Nova Rg';
+    font-family: sans-serif;
     background-color: #EEF4F8;
 }
 p {
